# contextractor-ts

./: .cspell.json  .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  biome.json  cspell.json  knip.json  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.claude/: settings.json
.claude/agents/: apify-ts-coder.md  code-reviewer.md  network-interceptor.md  prompt-formatter.md  prompt-modifier.md  prompt-writer.md  rust-pro.md  scraper-coder.md  test-runner.md  ts-pro.md  web-research-specialist.md
.claude/commands/: autonomous.md  proxy-test.md  run.md  validate.md
.claude/hooks/: spec-gate.sh  test-gate.sh
.claude/rules/: apify-patterns.md  apify-production.md  minimal-diff.md  native-addon-boundary.md  prompt-engineering-knowledge.md  rule-coverage.md  spec-maintenance.md  task-completion.md  testing.md  user-facing-docs.md
.github/workflows/: build-napi.yml
.opencode/agents/: code-reviewer.md  prompt-formatter.md  prompt-modifier.md  prompt-writer.md  rust-pro.md  (+3 more)
apps/contextractor/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/contextractor/.actor/: actor.json  dataset_schema.json  input_schema.json
apps/contextractor/src/: __init__.py  config.py  extraction.py  handler.py  main.py
prompts/: _meta.md  compare-funtionality.md  get-autonomous-working.md  impor-claude-setup-from-tools.md  import-claude-setup-from-tools.md  migrate.md  rearch.md  stub-autonomous-maintenance.md  tests-add.md  tests-add2.md  tests.md
(+733 files in other folders)
